--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "jsonresume-theme-autumn",
-  "version": "1.0.1",
+  "name": "jsonresume-theme-autumn-pathify",
+  "version": "1.0.2",
   "description": "Autumn theme for the JSON Resume Project",
   "author": "Lorenzo Dal'Aqua",
   "repository": {
     "type": "git",
-    "url": "https://github.com/lorenzodalaqua/jsonresume-theme-autumn"
+    "url": "https://github.com/conorw/jsonresume-theme-autumn"
   },
   "scripts": {
     "start": "resume serve --theme .",
