update package json

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jsonresume-theme-autumn-pathify",
   "version": "1.0.2",
   "description": "Autumn theme for the JSON Resume Project",
-  "author": "Lorenzo Dal'Aqua",
+  "author": "Conor Woods",
   "repository": {
     "type": "git",
     "url": "https://github.com/conorw/jsonresume-theme-autumn"
